--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+/* Swiper Css */
+.swiper-wrap .swiper-slide {
+  word-break: keep-all;
+  color:var(--sub-background-color);
+  margin: 0 0 3rem 0;
+  font-size:1.6rem;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.swiper-wrap .swiper-pagination {
+  position: relative;
+  bottom:0 !important;
+  text-align: left;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.swiper-wrap .swiper-pagination .swiper-pagination-bullet {
+  width: 1.2rem;
+  height: 1.2rem;
+  background-color: var(--sub-background-color);
+  margin: 0 1.4rem 0 0 !important;
+  opacity:1;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.swiper-wrap .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: var(--main-color)
 }
