--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,11 @@
   box-sizing:border-box;
 }
 .react-calendar {
-  width:100%;
+  width:100% !important;
   background-color:#fff;
   border-radius:10px;
   box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.1);
+  border: 0 !important;
 }
 /* Swiper Css */
 .swiper-wrap .swiper-slide {
